--- a/apps/webflow-cloud/package.json
+++ b/apps/webflow-cloud/package.json
@@ -1,8 +1,23 @@
 {
-	"devDependencies": {
-		"@webflow/webflow-cli": "^1.8.43"
-	},
+	"name": "webflow-cloud",
+	"version": "0.1.0",
+	"private": true,
 	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint",
 		"webflow": "webflow"
+	},
+	"dependencies": {
+		"@opennextjs/cloudflare": "^1.6.5",
+		"next": "14.2.5",
+		"react": "18.3.1",
+		"react-dom": "18.3.1"
+	},
+	"devDependencies": {
+		"@types/react": "19.1.13",
+		"@webflow/webflow-cli": "^1.8.43",
+		"typescript": "^5.5.4"
 	}
 }
